Code smells (#1165)
Co-authored-by: Andrey Pereverzin <andrey.pereverzin@hmcts.net>